# CCSNet

./: .gitignore  .gitmodules  LICENSE  README.md  Snakefile  environment.yaml  glitches.h5  pyproject.toml
.snakemake/metadata/: L2hvbWUvYW5keS9zbS50eHQ=
H1/: omicron_H1.ini  segments.txt
H1/condor/: omicron.dag  omicron.dag.condor.sub  omicron.dag.lib.err  omicron.dag.metrics  omicron.dot  omicron.sh  omicron.sub  post-processing-rm.sub  post-processing.sub
H1/logs/: frames.1263588390-1263592390.lcf  omicron-16844077-0.out  omicron-16844078-0.out  omicron-16844079-0.err  omicron-16844079-0.out  omicron-16844080-0.out  omicron-16844081-0.out  omicron.1263588390-1263592390.dag.dagman.out  parameters.1263588390-1263592390.txt
H1/parameters/: parameters-0.txt
L1/: omicron_L1.ini  segments.txt
L1/condor/: omicron.dag  omicron.dag.condor.sub  omicron.dag.lib.err  omicron.dag.metrics  omicron.dot  omicron.sh  omicron.sub  post-processing-rm.sub  post-processing.sub
L1/logs/: frames.1263588390-1263592390.lcf  omicron-16844085-0.out  omicron-16844086-0.out  omicron-16844087-0.out  omicron-16844088-0.out  omicron-16844089-0.out  omicron-16844090-0.out  omicron-16844091-0.out  omicron.1263588390-1263592390.dag.dagman.out  parameters.1263588390-1263592390.txt
L1/parameters/: parameters-0.txt
apps/: arguments.toml  arguments_H1_remove_chop.toml  arguments_H1_remove_nochop.toml  arguments_H1_replace_chop.toml  arguments_H1_replace_nochop.toml  arguments_L1_remove_chop.toml  arguments_L1_remove_nochop.toml  arguments_L1_replace_chop.toml  arguments_L1_replace_nochop.toml
apps/datagen/: pyproject.toml  test_ccsn.toml
apps/datagen/collections/: ccsn.py  get_strain.py  run_omicron.py  strain_info.py  strain_streamer.py
apps/datagen/test_data/: background_sampler.py  test_bg.py  test_injection.py  test_orchestrator.py
apps/inference/: ccsnet-streamer.py  omicron-streamer.py
apps/louvre/: analysis.py  data_info.py
apps/tests/: tests.smk  (+4 more)
apps/train/: ccsn.toml  ccsn_sub.toml  pyproject.toml
apps/train/trainer/: arguments.toml  orchestrator.py  trainer.py  validator.py
libs/: pyproject.toml
libs/ccsnet/: pyproject.toml
libs/ccsnet/architectures/: pyproject.toml
libs/ccsnet/ccsnet/analysis/: __init__.py  infer.py
libs/ccsnet/ccsnet/arch/: wavenet.py
libs/ccsnet/ccsnet/caliber/: resample_functions.py  standardization.py
libs/ccsnet/ccsnet/omicron/: __init__.py  lfs.py  utils.py
libs/ccsnet/ccsnet/sampling/: __init__.py  blending.py  sampler.py
libs/ccsnet/ccsnet/train/: __init__.py  sampling.py  train.py
libs/ccsnet/ccsnet/utils/: __init__.py  args_passing.py  decorator.py  h5_reader.py  model_loader.py
libs/ccsnet/ccsnet/waveform/: __init__.py  padding.py  projection.py
libs/ccsnet/trainer/: pyproject.toml
projects/train/: pyproject.toml  trainer.py
(+118 files in other folders)
