[tool.poetry]
name = "datagen"
version = "0.1.0"
description = "Data generation for CCSNet"
authors = ["Andy Chen <andy.c.80297@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

ml4gw = {path = "../../ml4gw", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
